p2/configs/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: hashicorp/http-echo
        args:
        - "-text=app3"
        ports:
        - containerPort: 5678
